--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
   <body>
     <div class="page">
       <header id="header"  class="header">
-        <div class="header-container">
+        <div class="header__container">
           <img
             src="./images/logo.svg"
             alt="logo"
-            class="header-container_image"
+            class="header__image"
           />
-          <div class="header-container-contacts">
-            <ul class="header-container-contacts_list">
+          <div class="header__contacts">
+            <ul class="header__contacts-list">
               <li>
-                <a href="#header" class="header-container-contacts_list__item"
+                <a href="#header" class="header__list-item"
                   >Home</a
                 >
               </li>
               <li>
-                <a href="#episodes" class="header-container-contacts_list__item"
+                <a href="#episodes" class="header__list-item"
                   >Episodes</a
                 >
               </li>
               <li>
-                <a href="#hero" class="header-container-contacts_list__item"
+                <a href="#hero" class="header__list-item"
                   >About</a
                 >
               </li>
               <li>
-                <a href="#footer" class="header-container-contacts_list__item"
+                <a href="#footer" class="header__list-item"
                   >Contact</a
                 >
               </li>
@@ -46,53 +46,53 @@
 
       <main class="main">
         <section id="cover" class="cover">
-          <div class="cover-container">
+          <div class="cover__container">
             <img
               src="./images/cover_img.png"
               alt="cover"
-              class="cover-container_image"
+              class="cover__image"
             />
-            <div class="cover-container_content">
-              <h1 class="cover-header">
+            <div class="cover__content">
+              <h1 class="cover__header">
                 Take your podcast to the
-                <span class="cover-header_underline">next</span>
-                <span class="cover-header_bold">level</span>
+                <span class="cover__header_underline">next</span>
+                <span class="cover__header_bold">level</span>
               </h1>
-              <div class="cover-listen">
-                <p class="cover-listen_text">Listen on</p>
-                <ul class="cover-listen_buttons">
-                  <li class="cover-listen_button">
+              <div class="listen">
+                <p class="listen__text">Listen on</p>
+                <ul class="listen__buttons">
+                  <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="cover-listen_button cover-listen_button__spotify"
+                      class="listen-button listen-button__spotify"
                       aria-label="Spotify"
                     ></a>
                   </li>
-                  <li class="cover-listen_list">
+                  <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="cover-listen_button cover-listen_button__red"
+                      class="listen-button listen-button__red"
                       aria-label="Red"
                     ></a>
                   </li>
-                  <li class="cover-listen_button">
+                  <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="cover-listen_button cover-listen_button__soundcloud"
+                      class="listen-button listen-button__soundcloud"
                       aria-label="Soundcloud"
                     ></a>
                   </li>
-                  <li class="cover-listen_button">
+                  <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="cover-listen_button cover-listen_button__podcast"
+                      class="listen-button listen-button__podcast"
                       aria-label="Podcast"
                     ></a>
                   </li>
-                  <li class="cover-listen_button">
+                  <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="cover-listen_button cover-listen_button__radio"
+                      class="listen-button listen-button__radio"
                       aria-label="Radio"
                     ></a>
                   </li>
@@ -103,64 +103,64 @@
         </section>
 
         <section id="episodes" class="episodes">
-          <div class="episodes_container">
-            <div class="episodes_container__header">
-              <h2 class="episodes_header">Latest episodes</h2>
-              <button class="episodes_button">View all episodes</button>
+          <div class="episodes__container">
+            <div class="episodes__title">
+              <h2 class="episodes__header">Latest episodes</h2>
+              <button class="episodes__button">View all episodes</button>
             </div>
-            <ul class="episodes_container__cards">
-              <li class="episodes_card">
+            <ul class="episodes__cards">
+              <li class="episodes__card">
                 <div class="card">
-                  <img src="./images/card1.png" alt="" class="card_image" />
-                  <div class="card_content">
-                    <button class="card_button">Gear</button>
-                    <p class="card_p">Episode 3</p>
-                    <h3 class="card_header">
+                  <img src="./images/card1.png" alt="" class="card__image" />
+                  <div class="card__content">
+                    <button class="card__button">Gear</button>
+                    <p class="card__text">Episode 3</p>
+                    <h3 class="card__header">
                       Should you get outboard audio gear?
                     </h3>
-                    <p class="card_p2">
+                    <p class="card__text2">
                       Is hardware really worth it when it comes to podcasting?
                       The answer is...it depends. Here’s our reasons on why you
                       might want to consider picking something up.
                     </p>
-                    <button class="card_button2">View Episode Details</button>
+                    <button class="card__button2">View Episode Details</button>
                   </div>
                 </div>
               </li>
 
-              <li class="episodes_card">
+              <li class="episodes__card">
                 <div class="card">
-                  <img src="./images/card2.png" alt="" class="card_image" />
-                  <div class="card_content">
-                    <button class="card_button">Tips & Tricks</button>
-                    <p class="card_p">Episode 2</p>
-                    <h3 class="card_header">
+                  <img src="./images/card2.png" alt="" class="card__image" />
+                  <div class="card__content">
+                    <button class="card__button">Tips & Tricks</button>
+                    <p class="card__text">Episode 2</p>
+                    <h3 class="card__header">
                       Mic tricks to take you to the next level
                     </h3>
-                    <p class="card_p2">
+                    <p class="card__text2">
                       Stop rolling with those default settings on your mic.
                       These small tweaks will take you from sounding good to
                       great.
                     </p>
-                    <button class="card_button2">View Episode Details</button>
+                    <button class="card__button2">View Episode Details</button>
                   </div>
                 </div>
               </li>
-              <li class="episodes_card">
+              <li class="episodes__card">
                 <div class="card">
-                  <img src="./images/card3.png" alt="" class="card_image" />
-                  <div class="card_content">
-                    <button class="card_button">Gear</button>
-                    <p class="card_p">Episode 1</p>
-                    <h3 class="card_header card_header_little">
+                  <img src="./images/card3.png" alt="" class="card__image" />
+                  <div class="card__content">
+                    <button class="card__button">Gear</button>
+                    <p class="card_text">Episode 1</p>
+                    <h3 class="card__header card__header_little">
                       The best microphone under $200
                     </h3>
-                    <p class="card_p2">
+                    <p class="card__text2">
                       With so many microphones on the market, how are you
                       supposed to know what’s the best? Take a look at our top
                       picks.
                     </p>
-                    <button class="card_button2">View Episode Details</button>
+                    <button class="card__button2">View Episode Details</button>
                   </div>
                 </div>
               </li>
