--- a/index.html
+++ b/index.html
@@ -64,35 +64,35 @@
                   <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="listen-button listen-button__spotify"
+                      class="listen__button listen-button__spotify"
                       aria-label="Spotify"
                     ></a>
                   </li>
                   <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="listen-button listen-button__red"
+                      class="listen__button listen-button__red"
                       aria-label="Red"
                     ></a>
                   </li>
                   <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="listen-button listen-button__soundcloud"
+                      class="listen__button listen-button__soundcloud"
                       aria-label="Soundcloud"
                     ></a>
                   </li>
                   <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="listen-button listen-button__podcast"
+                      class="listen__button listen-button__podcast"
                       aria-label="Podcast"
                     ></a>
                   </li>
                   <li class="cover__listen-button">
                     <a
                       href="#"
-                      class="listen-button listen-button__radio"
+                      class="listen__button listen-button__radio"
                       aria-label="Radio"
                     ></a>
                   </li>
@@ -299,93 +299,93 @@
         </section>
       </main>
       <footer id="footer" class="footer">
-        <div class="footer_container">
-          <div class="footer_logo">
+        <div class="footer__container">
+          <div class="footer__logo">
             <img
               src="./images/footetlogo.svg"
               alt="logo"
               class="footer_logo_image"
             />
-            <div class="footer_social">
-                <ul class="footer_social_list">
-                <li><a href="#" class="footer-social_logo_insta"></a></li>
-                <li><a href="#" class="footer-social_logo_twitter"></a></li>
-                <li><a href="#" class="footer-social_logo_facebook"></a></li>
+            <div class="footer__social">
+                <ul class="footer__social_list">
+                <li><a href="#" class="footer__social_logo_insta"></a></li>
+                <li><a href="#" class="footer__social_logo_twitter"></a></li>
+                <li><a href="#" class="footer__social_logo_facebook"></a></li>
             </ul>
             </div>
           </div>
-          <div class="footer_home">
-            <ul class="footer_home_list">
+          <div class="footer__home">
+            <ul class="footer__home_list">
               <li>
-                <a href="#header" class="footer_list_item">Home</a>
+                <a href="#header" class="footer__list_item">Home</a>
               </li>
               <li>
-                <a href="#hero" class="footer_list_item">About</a>
+                <a href="#hero" class="footer__list_item">About</a>
               </li>
               <li>
-                <a href="#episodes" class="footer_list_item">Episodes</a>
+                <a href="#episodes" class="footer__list_item">Episodes</a>
               </li>
               <li>
-                <a href="#footer" class="footer_list_item">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer_style">
-            <ul class="footer_style_list">
-              <li>
-                <a href="#" class="footer_list_item">Style Guide</a>
-              </li>
-              <li>
-                <a href="#" class="footer_list_item">Instructions</a>
-              </li>
-              <li>
-                <a href="#" class="footer_list_item">Changelog</a>
-              </li>
-              <li>
-                <a href="#" class="footer_list_item">Credit</a>
-              </li>
-              <li>
-                <a href="#" class="footer_list_item">Powered by Webflow</a>
-              </li>
-              <li>
-                <a href="#" class="footer_list_item">Licenses</a>
+                <a href="#footer" class="footer__list_item">Contact</a>
               </li>
             </ul>
           </div>
-          <div class="footer_links">
-            <ul class="cover-listen_buttons cover-listen_buttons_footer">
-              <li class="cover-listen_button">
+          <div class="footer__style">
+            <ul class="footer__style_list">
+              <li>
+                <a href="#" class="footer__list_item">Style Guide</a>
+              </li>
+              <li>
+                <a href="#" class="footer__list_item">Instructions</a>
+              </li>
+              <li>
+                <a href="#" class="footer__list_item">Changelog</a>
+              </li>
+              <li>
+                <a href="#" class="footer__list_item">Credit</a>
+              </li>
+              <li>
+                <a href="#" class="footer__list_item">Powered by Webflow</a>
+              </li>
+              <li>
+                <a href="#" class="footer__list_item">Licenses</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__links">
+            <ul class="listen__buttons listen__buttons_footer">
+              <li class="listen__button">
                 <a
                   href="#"
-                  class="cover-listen_button cover-listen_button__spotify"
+                  class="listen__button listen-button__spotify"
                   aria-label="Spotify"
                 ></a>
               </li>
-              <li class="cover-listen_button">
+              <li class="listen__button">
                 <a
                   href="#"
-                  class="cover-listen_button cover-listen_button__red"
+                  class="listen__button listen-button__red"
                   aria-label="Red"
                 ></a>
               </li>
-              <li class="cover-listen_button">
+              <li class="listen__button">
                 <a
                   href="#"
-                  class="cover-listen_button cover-listen_button__soundcloud"
+                  class="listen__button listen-button__soundcloud"
                   aria-label="Soundcloud"
                 ></a>
               </li>
-              <li class="cover-listen_button">
+              <li class="listen__button">
                 <a
                   href="#"
-                  class="cover-listen_button cover-listen_button__podcast"
+                  class="listen__button listen-button__podcast"
                   aria-label="Podcast"
                 ></a>
               </li>
-              <li class="cover-listen_button">
+              <li class="listen__button">
                 <a
                   href="#"
-                  class="cover-listen_button cover-listen_button__radio"
+                  class="listen__button listen-button__radio"
                   aria-label="Radio"
                 ></a>
               </li>
