--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <img src="./images/card3.png" alt="" class="card__image" />
                   <div class="card__content">
                     <button class="card__button">Gear</button>
-                    <p class="card_text">Episode 1</p>
+                    <p class="card__text">Episode 1</p>
                     <h3 class="card__header card__header_little">
                       The best microphone under $200
                     </h3>
@@ -169,16 +169,16 @@
         </section>
 
         <section id="hero" class="hero">
-          <div class="hero-container">
-            <div class="hero-container_content">
-              <img src="./images/Frame.png" class="hero_frame" alt="frame" />
-              <p class="hero_p">Meet your host</p>
-              <h3 class="hero_header">Jacob Paulaner</h3>
-              <p class="hero_p2">
+          <div class="hero__container">
+            <div class="hero__content">
+              <img src="./images/Frame.png" class="hero__frame" alt="frame" />
+              <p class="hero__text">Meet your host</p>
+              <h3 class="hero__header">Jacob Paulaner</h3>
+              <p class="hero__text2">
                 Jacob has a background in audio engineering, and has been
                 podcasting since the early days.
               </p>
-              <p class="hero_p3">
+              <p class="hero__text3">
                 He’s here to help you level up your game by sharing everything
                 he’s learned along the way.
               </p>
@@ -186,32 +186,32 @@
             <img
               src="./images/hero.png"
               alt="hero"
-              class="hero-container_image"
+              class="hero__image"
             />
           </div>
-          <div class="hero_subscribe">
-            <div class="hero_card">
-              <div class="hero_content">
-                <p class="hero_p4">Email Newsletter</p>
-                <h3 class="hero_header_card">Subscribe for updates</h3>
+          <div class="hero__subscribe">
+            <div class="hero__card">
+              <div class="hero__cadr_content">
+                <p class="hero__text4">Email Newsletter</p>
+                <h3 class="hero__header_card">Subscribe for updates</h3>
               </div>
-              <div class="hero_form">
-                <form class="hero_form_class" method="get">
+              <div class="hero__form">
+                <form class="hero__form_class" method="get">
                   <input
-                    class="name_form"
+                    class="name__form"
                     type="text"
                     name="name"
                     id="name"
                     placeholder="Name"
                   />
                   <input
-                    class="email_form"
+                    class="email__form"
                     type="email"
                     name="email"
                     id="email"
                     placeholder="Email"
                   />
-                  <button class="hero_button">Submit</button>
+                  <button class="hero__button">Submit</button>
                 </form>
               </div>
             </div>
