--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <section id="hero" class="hero">
           <div class="hero__container">
             <div class="hero__content">
-              <img src="./images/Frame.png" class="hero__frame" alt="frame" />
+             <img src="./images/Frame.png" class="hero__frame" alt="frame" />
               <p class="hero__text">Meet your host</p>
               <h3 class="hero__header">Jacob Paulaner</h3>
               <p class="hero__text2">
@@ -189,9 +189,10 @@
               class="hero__image"
             />
           </div>
+          <div class="hero__container_subscribe">
           <div class="hero__subscribe">
             <div class="hero__card">
-              <div class="hero__cadr_content">
+              <div class="hero__card_content">
                 <p class="hero__text4">Email Newsletter</p>
                 <h3 class="hero__header_card">Subscribe for updates</h3>
               </div>
@@ -216,6 +217,7 @@
               </div>
             </div>
           </div>
+        </div>
         </section>
         <section id="reviews" class="reviews">
           <div class="reviews_container">
