--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       The answer is...it depends. Here’s our reasons on why you
                       might want to consider picking something up.
                     </p>
-                    <button class="card__button2">View Episode Details</button>
+                    <button class="episodes__button card__button2">View Episode Details</button>
                   </div>
                 </div>
               </li>
@@ -142,7 +142,7 @@
                       These small tweaks will take you from sounding good to
                       great.
                     </p>
-                    <button class="card__button2">View Episode Details</button>
+                    <button class="episodes__button card__button2">View Episode Details</button>
                   </div>
                 </div>
               </li>
@@ -160,7 +160,7 @@
                       supposed to know what’s the best? Take a look at our top
                       picks.
                     </p>
-                    <button class="card__button2">View Episode Details</button>
+                    <button class="episodes__button card__button2">View Episode Details</button>
                   </div>
                 </div>
               </li>
