--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                   </div>
                 </div>
               </li>
-
               <li class="episodes__card">
                 <div class="card">
                   <img src="./images/card2.png" alt="" class="card__image" />
@@ -167,28 +166,31 @@
             </ul>
           </div>
         </section>
-
         <section id="hero" class="hero">
-          <div class="hero__container">
-            <div class="hero__content">
-             <img src="./images/Frame.png" class="hero__frame" alt="frame" />
-              <p class="hero__text">Meet your host</p>
-              <h3 class="hero__header">Jacob Paulaner</h3>
-              <p class="hero__text2">
-                Jacob has a background in audio engineering, and has been
-                podcasting since the early days.
-              </p>
-              <p class="hero__text3">
-                He’s here to help you level up your game by sharing everything
-                he’s learned along the way.
-              </p>
+            <div class="hero__container">
+              <div class="hero__content">
+               <img src="./images/Frame.png" class="hero__frame" alt="frame" />
+                <p class="hero__text">Meet your host</p>
+                <h3 class="hero__header">Jacob Paulaner</h3>
+                <p class="hero__text2">
+                  Jacob has a background in audio engineering, and has been
+                  podcasting since the early days.
+                </p>
+                <p class="hero__text3">
+                  He’s here to help you level up your game by sharing everything
+                  he’s learned along the way.
+                </p>
+              </div>
+              <div class="hero__imagecontainer">
+                  <img
+                  src="./images/hero.png"
+                  alt="hero"
+                  class="hero__image"
+                />
+              </div>
             </div>
-            <img
-              src="./images/hero.png"
-              alt="hero"
-              class="hero__image"
-            />
-          </div>
+            </section>
+          <section>
           <div class="hero__container_subscribe">
           <div class="hero__subscribe">
             <div class="hero__card">
@@ -218,7 +220,8 @@
             </div>
           </div>
         </div>
-        </section>
+            </section>
+
         <section id="reviews" class="reviews">
           <div class="reviews_container">
             <ul class="reviews_cards">
