--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
       <main class="main">
         <section id="cover" class="cover">
           <div class="cover__container">
-            <img
-              src="./images/cover_img.png"
-              alt="cover"
-              class="cover__image"
-            />
+            <div class="cover__pic">
+                <img
+                src="./images/cover_img.png"
+                alt="cover"
+                class="cover__image"
+              />
+              <img src="./images/light.svg" alt="light" class="banner__light" width="68" height="74">
+            </div>
             <div class="cover__content">
               <h1 class="cover__header">
                 Take your podcast to the
@@ -197,6 +200,8 @@
               <div class="hero__card_content">
                 <p class="hero__text4">Email Newsletter</p>
                 <h3 class="hero__header_card">Subscribe for updates</h3>
+                <div class="light2">
+                </div>
               </div>
               <div class="hero__form">
                 <form class="hero__form_class" method="get">
