--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
                   <img src="./images/card1.png" alt="" class="card__image" />
                   <div class="card__content">
                     <button class="card__button">Gear</button>
-                    <p class="card__text">Episode 3</p>
+                    <p class="card__subtitle">Episode 3</p>
                     <h3 class="card__header">
                       Should you get outboard audio gear?
                     </h3>
-                    <p class="card__text2">
+                    <p class="card__text">
                       Is hardware really worth it when it comes to podcasting?
                       The answer is...it depends. Here’s our reasons on why you
                       might want to consider picking something up.
                     </p>
-                    <button class="episodes__button card__button2">View Episode Details</button>
+                    <button class="episodes__button card__button_big">View Episode Details</button>
                   </div>
                 </div>
               </li>
@@ -135,16 +135,16 @@
                   <img src="./images/card2.png" alt="" class="card__image" />
                   <div class="card__content">
                     <button class="card__button">Tips & Tricks</button>
-                    <p class="card__text">Episode 2</p>
+                    <p class="card__subtitle">Episode 2</p>
                     <h3 class="card__header">
                       Mic tricks to take you to the next level
                     </h3>
-                    <p class="card__text2">
+                    <p class="card__text">
                       Stop rolling with those default settings on your mic.
                       These small tweaks will take you from sounding good to
                       great.
                     </p>
-                    <button class="episodes__button card__button2">View Episode Details</button>
+                    <button class="episodes__button card__button_big">View Episode Details</button>
                   </div>
                 </div>
               </li>
@@ -153,16 +153,16 @@
                   <img src="./images/card3.png" alt="" class="card__image" />
                   <div class="card__content">
                     <button class="card__button">Gear</button>
-                    <p class="card__text">Episode 1</p>
+                    <p class="card__subtitle">Episode 1</p>
                     <h3 class="card__header card__header_little">
                       The best microphone under $200
                     </h3>
-                    <p class="card__text2">
+                    <p class="card__text">
                       With so many microphones on the market, how are you
                       supposed to know what’s the best? Take a look at our top
                       picks.
                     </p>
-                    <button class="episodes__button card__button2">View Episode Details</button>
+                    <button class="episodes__button card__button_big">View Episode Details</button>
                   </div>
                 </div>
               </li>
@@ -173,13 +173,13 @@
             <div class="hero__container">
               <div class="hero__content">
                <img src="./images/Frame.png" class="hero__frame" alt="frame" />
-                <p class="hero__text">Meet your host</p>
+                <p class="hero__subtitle">Meet your host</p>
                 <h3 class="hero__header">Jacob Paulaner</h3>
-                <p class="hero__text2">
+                <p class="hero__text">
                   Jacob has a background in audio engineering, and has been
                   podcasting since the early days.
                 </p>
-                <p class="hero__text3">
+                <p class="hero__text hero__text_padding">
                   He’s here to help you level up your game by sharing everything
                   he’s learned along the way.
                 </p>
@@ -198,7 +198,7 @@
           <div class="hero__subscribe">
             <div class="hero__card">
               <div class="hero__card_content">
-                <p class="hero__text4">Email Newsletter</p>
+                <p class="hero__subtitle_sib">Email Newsletter</p>
                 <h3 class="hero__header_card">Subscribe for updates</h3>
                 <div class="light2">
                 </div>
