--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
             />
             <div class="footer__social">
                 <ul class="footer__social_list">
-                <li><a href="#" class="footer__social_logo_insta"></a></li>
-                <li><a href="#" class="footer__social_logo_twitter"></a></li>
-                <li><a href="#" class="footer__social_logo_facebook"></a></li>
+                <li><a href="#"><img src="./images/insta.svg" width="24" height="24" alt="Instagram"></a></li>
+                <li><a href="#"><img src="./images/twitter.svg" width="24" height="24" alt="twitter"></a></li>
+                <li><a href="#"><img src="./images/facebook.svg" width="24" height="24" alt="facebook"></a></li>
             </ul>
             </div>
           </div>
